[project]
name = "oqullus-sdk"
version = "0.1.0"
description = "Oqullus Python SDK"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["requests>=2.31.0"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["oqullus_sdk*"]
