[project]
name = "oqullus-sdk"
version = "0.1.0"
description = "Oqullus Python SDK"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["requests>=2.31.0", "tenacity>=8.2.3"]

[project.optional-dependencies]
dev = ["pytest>=8.3.0"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["oqullus_sdk*"]

[tool.pytest.ini_options]
markers = ["integration: marks tests that call external services"]
